[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tsinfer/_version.py"

[project]
name = "tsinfer"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Infer tree sequences from genetic variation data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3+"}
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "inference",
    "tsinfer",
]
dependencies = [
    "numpy>=1.23.5",
    "six",
    "tqdm",
    "humanize",
    "daiquiri",
    "tskit>=0.5.3",
    "numcodecs>=0.6,<0.15.1", #Pinned due to https://github.com/zarr-developers/numcodecs/issues/733
    "zarr>=2.2,!=2.11.0,!=2.11.1,!=2.11.2,<3",
    "lmdb",
    "sortedcontainers",
    "attrs>=19.2.0",
    "numba>=0.61.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://tskit.dev/tsinfer"
Documentation = "https://tskit.dev/tsinfer/docs/stable"
Changelog = "https://tskit.dev/tsinfer/docs/stable/CHANGELOG.html"
"Bug Tracker" = "https://github.com/tskit-dev/tsinfer/issues"
"Source Code" = "https://github.com/tskit-dev/tsinfer/"

[project.scripts]
tsinfer = "tsinfer.__main__:main"

[project.optional-dependencies]
test = [
    "build==1.2.2.post1",
    "colorama==0.4.6",
    "daiquiri==3.2.5.1",
    "humanize==4.12.1",
    "lmdb==1.6.2",
    "matplotlib==3.9.4",
    "meson==1.7.0",
    "msprime==1.3.4",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "seaborn==0.13.2",
    "sgkit[vcf]==0.9.0; sys_platform != 'win32'",
    "tskit==0.6.0",
    "tqdm==4.67.1",
    "twine==6.1.0"
]

docs = [
    "jupyter-book==1.0.4.post1",
    "sphinx-issues==5.0.0",
    "sphinx-argparse==0.5.2",
    "humanize==4.12.1",
    "lmdb==1.6.2",
    "tqdm==4.67.1",
    "daiquiri==3.3.0",
    "msprime==1.3.3",
    "sgkit[vcf]==0.9.0",
    "ipywidgets==8.1.5",
    "Bio==1.7.1",
    "bio2zarr==0.1.4",
    "sphinx-book-theme",
    "pyfaidx==0.8.1.3"
]

dev = [
    "attrs",
    "codecov",
    "coverage",
    "flake8",
    "six",
    "tqdm",
    "humanize",
    "daiquiri",
    "msprime>=1.0.0",
    "tskit>=0.5.3",
    "lmdb",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "h5py",
    "sortedcontainers",
    "python-prctl; sys_platform == 'linux'",
    "numa; sys_platform == 'linux'",
    "sphinx",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "setuptools>=45",
    "setuptools_scm",
    "matplotlib",
    "seaborn",
    "colorama",
    "sgkit[vcf]",
    "sphinx-book-theme",
    "jupyter-book",
    "sphinx-issues",
    "ipywidgets",
    "pyfaidx"
]

[tool.setuptools]
packages = ["tsinfer"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:SampleData'
]