[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tsinfer/_version.py"

[project]
name = "tsinfer"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Infer tree sequences from genetic variation data."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "inference",
    "tsinfer",
]
dependencies = [
    "numpy>=2",
    "six",
    "tqdm",
    "humanize",
    "daiquiri",
    "tskit>=1.0.0",
    "zarr<3",
    "lmdb",
    "sortedcontainers",
    "attrs",
    "numba",
    "psutil",
    "bio2zarr>=0.1.7",
]

# TODO add these as pypi extra installs. We'd need to install
# libnuma on the test build to support this.
# https://github.com/tskit-dev/tsinfer/issues/1085
# "python-prctl; sys_platform == 'linux'",
# "numa; sys_platform == 'linux'",

[project.urls]
Homepage = "https://tskit.dev/tsinfer"
Documentation = "https://tskit.dev/tsinfer/docs/stable"
Changelog = "https://tskit.dev/tsinfer/docs/stable/CHANGELOG.html"
"Bug Tracker" = "https://github.com/tskit-dev/tsinfer/issues"
"Source Code" = "https://github.com/tskit-dev/tsinfer/"

[project.scripts]
tsinfer = "tsinfer.__main__:main"

[dependency-groups]
test = [
    "colorama",
    "daiquiri",
    "humanize",
    "lmdb",
    "meson",
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "bio2zarr[tskit]",
    "setuptools",
    "tskit",
    "tqdm",
    "xarray",
]

docs = [
    "jupyter-book<2",
    "sphinx-issues",
    "sphinx-argparse",
    "humanize",
    "lmdb",
    "tqdm",
    "daiquiri",
    "msprime",
    "ipywidgets",
    "bio2zarr[tskit]",
    "bio2zarr[vcf]",
    "sphinx-book-theme",
    "pyfaidx",
]

dev = [
    "attrs",
    "codecov",
    "coverage",
    "flake8",
    "six",
    "tqdm",
    "humanize",
    "daiquiri",
    "msprime>=1.0.0",
    "tskit>=1.0.0",
    "lmdb",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "sortedcontainers",
    "sphinx",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "setuptools>=45",
    "setuptools_scm",
    "matplotlib",
    "seaborn",
    "colorama",
    "sphinx-book-theme",
    "jupyter-book<2",
    "sphinx-issues",
    "ipywidgets",
    "pyfaidx",
    "clang-format==21.1.8",
]

[tool.setuptools]
packages = ["tsinfer"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:SampleData'
]
