[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tsinfer/_version.py"
local_scheme = "no-local-version"

[project]
name = "tsinfer"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Infer tree sequences from genetic variation data."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "inference",
    "tsinfer",
]
dependencies = [
    "numpy>=2",
    "tqdm",
    "humanize",
    "daiquiri",
    "tskit>=1.0.0",
    "zarr>=3.1",
    "lmdb",
    "sortedcontainers",
    "numba",
    "psutil",
]

# TODO add these as pypi extra installs. We'd need to install
# libnuma on the test build to support this.
# https://github.com/tskit-dev/tsinfer/issues/1085
# "python-prctl; sys_platform == 'linux'",
# "numa; sys_platform == 'linux'",

[project.urls]
Homepage = "https://tskit.dev/tsinfer"
Documentation = "https://tskit.dev/tsinfer/docs/stable"
Changelog = "https://tskit.dev/tsinfer/docs/stable/CHANGELOG.html"
"Bug Tracker" = "https://github.com/tskit-dev/tsinfer/issues"
"Source Code" = "https://github.com/tskit-dev/tsinfer/"

[project.scripts]
tsinfer = "tsinfer.__main__:main"

[dependency-groups]
test = [
    "setuptools",
    "bio2zarr[tskit]",
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "xarray",
]

docs = [
    "bio2zarr[tskit,vcf]",
    "humanize",
    "ipywidgets",
    "jupyter-book<2",
    "msprime",
    "pyfaidx",
    "sphinx-argparse",
    "sphinx-book-theme",
    "sphinx-issues",
]

# Fully pin lint requirements for determinism. 
lint = [
    "clang-format==21.1.8",
    "ruff==0.15.1",
    "prek==0.3.3",
]

packaging = [
  "twine",
  "validate-pyproject[all]"
]

wheels = [
  "cibuildwheel",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

[tool.setuptools]
packages = ["tsinfer"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:SampleData'
]

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

# Same as Black.
line-length = 89
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "N806", "N802", "N803", # Various nags about uppercase vars
    "N818", # Exceptions not called "Error"
    "UP032", # Don't upgrade to f strings
    "B904", # raise from-issues
    "PT011", # pytest.raises(ValueError) too broad
    "PT012", # pytest.raises() block should contain a single simple statement
    "B028", # No stacklevel for warnings
    "B017", # Do not assert blind exception: `BaseException`
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["_tsinfer", "tsutil"]
known-third-party = [
  "msprime",
  "numpy",
  "pandas",
  "pytest",
  "setuptools",
  "xarray",
  "zarr"
]

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]
build-frontend = "build"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
skip = ["*musllinux*"]

# We can only install reasonably on linux because of numba.
# FIXME: https://github.com/tskit-dev/tsinfer/issues/1097
test-command = [
  "python -c \"import _tsinfer\"",
  "tsinfer --help",
]
