[metadata]
name = tsinfer
author= Tskit Developers
author_email = admin@tskit.dev
license = GNU GPLv3+
description= Infer tree sequences from genetic variation data.
long_description_content_type = text/x-markdown
long_description = file: README.md
url = https://tskit.dev/tsinfer
project_urls =
    Documentation = https://tskit.dev/tsinfer/docs/stable
    Changelog = https://tskit.dev/tsinfer/docs/stable/CHANGELOG.html
    Bug Tracker = https://github.com/tskit-dev/tsinfer/issues
    GitHub = https://github.com/tskit-dev/tsinfer/
classifiers =
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    population genetics
    tree sequence
    ancestral recombination graph
    evolutionary tree
    inference
    tsinfer
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = tsinfer
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    six
    tqdm
    humanize
    daiquiri
    tskit>=0.5.3
    numcodecs>=0.6
    # issues 965 and 967 at zarr-python prevent usage of 2.11.0 and 2.11.1
    zarr>=2.2!=2.11.0!=2.11.1!=2.11.2
    lmdb
    sortedcontainers
    attrs>=19.2.0

[options.entry_points]
console_scripts =
    tsinfer = tsinfer.__main__:main

[tool:pytest]
addopts = -n 4
testpaths =
    tests

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0
